# mlx-addons

./: README.md  pyproject.toml
benchmarks/: bench_ensemble_rp.py  bench_kernel_methods.py  bench_kmeans.py  bench_linalg.py  bench_linalg_purification.py  bench_pca.py  bench_random_projection.py  bench_rsvd_batched.py  bench_solvers_diis.py  bench_svd.py
src/mlx_addons/: __init__.py  nndescent.py
src/mlx_addons/cluster/: __init__.py  _kmeans.py
src/mlx_addons/decomposition/: __init__.py  _ensemble.py  _kernel_pca.py  _kernels.py  _nystroem.py  _pca.py  _random_projection.py
src/mlx_addons/knn/: __init__.py  _config.py  _data.py  _gpu_kernels.py  _knn.py  _metal_kernels.py  _morton.py  _soa_tree.py  _tools.py
src/mlx_addons/linalg/: __init__.py  _blocked.py  _det.py  _eig.py  _metal_kernels.py  _purification.py  _sparse.py  _svd.py
src/mlx_addons/solvers/: __init__.py  _diis.py
tests/: test_ensemble_rp.py  test_kernel_methods.py  test_kmeans.py  test_knn.py  test_linalg.py  test_linalg_eig.py  test_linalg_purification.py  test_nndescent.py  test_pca.py  test_random_projection.py  test_solvers_diis.py  test_svd.py
